# aura-cli

./: PKGBUILD  aura-cli-1.0-1-x86_64.pkg.tar.zst  default.nix  pyproject.toml
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: update-emojis.yml  update-flake-inputs.yml
pkg/aura-cli/: .BUILDINFO  .MTREE  .PKGINFO
pkg/aura-cli/opt/aura-cli/completions/: aura.fish
src/: README.md  flake.nix
src/aura/: __init__.py  parser.py
src/aura/data/templates/: discord.scss  qtct.conf  qtdark.colors  qtlight.colors  spicetify-dark.ini  spicetify-light.ini  warp.yaml
src/aura/subcommands/: emoji.py  record.py  resizer.py  scheme.py  screenshot.py  shell.py  toggle.py  wallpaper.py
src/aura/utils/: notify.py  paths.py  scheme.py  theme.py  version.py  wallpaper.py
src/aura/utils/material/: __init__.py
