[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aura"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "pillow",
    "materialyoucolor"
]

[project.scripts]
aura = "aura:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "completions",
    "README.md"
]

[tool.hatch.build.targets.wheel]
packages = ["src/aura"]

[tool.ruff]
line-length = 120
